Re-config CI/CD-fix: - dockerfile fix